[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["许杰友 Jieyou Xu (Joe) <jieyouxu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
image = "0.22.4"
crossbeam = "0.7.3"
num_cpus = "1.12.0"
